// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`todos — list row rendering > given a long TODO list > renders scrollable rows with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m TODOs (20/20)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m agent/extensions/ide/components/files/component.ts[0m                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m implement keyboard shortcut for file prev[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m race condition in list-picker update cycl[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m add rate limiting for concurrent file rea[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m workaround for terminal width on resize e[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker"[39m[38;2;225;228;232m;[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m deprecate legacy render method in split p[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m migrate test suite to vitest v2 [38;2;76;62;118mvitest.co[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { FileInfo } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m memory leak when switching between worksp[38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m add unit tests for symbol-utils formattin[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mrg[39m[38;2;225;228;232m([39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m, [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;255;171;112mquery[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromis[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m optimize file icon resolution performance[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m pi.[39m[38;2;179;146;240mexec[39m[38;2;225;228;232m([39m[38;2;158;203;255m"rg"[39m[38;2;225;228;232m, [[39m[38;2;158;203;255m"--files"[39m[38;2;225;228;232m, [39m[38;2;158;203;255m"-g"[39m[38;2;225;228;232m, query]).[39m[38;2;179;146;240mthen[39m[38;2;225;228;232m(([39m[38;2;255;171;112mr[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[0m             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m flaky test in split-panel border renderin[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    r.stdout.[39m[38;2;179;146;240msplit[39m[38;2;225;228;232m([39m[38;2;158;203;255m"[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m polyfill for older Nerd Font versions [38;2;76;62;118mage[39m[38;2;250;208;0m│[39m[0m  [38;2;158;203;255m"[39m[38;2;225;228;232m).[39m[38;2;179;146;240mfilter[39m[38;2;225;228;232m(Boolean).[39m[38;2;179;146;240mmap[39m[38;2;225;228;232m(([39m[38;2;255;171;112mp[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m ({ path: p })),[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m review error handling in jj command wrapp[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  );[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m implement caching layer for file previews[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m focus state not syncing across split pane[38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m add request validation for symbol queries[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateFilesComponent[39m[38;2;225;228;232m([39m[38;2;255;171;112moptions[39m[38;2;249;117;131m:[39m[38;2;225;228;232m {[39m[0m                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m improve logging format for tool execution[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m;[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m timeout when loading large diffs [38;2;76;62;118magent/ex[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mterminal[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mrows[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumber[39m[38;2;225;228;232m }; [39m[38;2;179;146;240mrequestRender[39m[38;2;249;117;131m:[39m[38;2;225;228;232m () [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m };[39m[0m        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m hotfix for bookmark list parsing edge cas[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mTheme[39m[38;2;225;228;232m;[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m technical debt in workspace state managem[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;179;146;240mdone[39m[38;2;249;117;131m:[39m[38;2;225;228;232m ([39m[38;2;255;171;112mresult[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mFileInfo[39m[38;2;225;228;232m [39m[38;2;249;117;131m|[39m[38;2;225;228;232m [39m[38;2;121;184;255mnull[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m;[39m[0m                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m set up GitHub Actions for CI pipeline [38;2;76;62;118m.gi[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mctx[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m };[39m[0m                                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}) {[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m { [39m[38;2;121;184;255mpi[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtui[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtheme[39m[38;2;225;228;232m, [39m[38;2;121;184;255mdone[39m[38;2;225;228;232m, [39m[38;2;121;184;255mctx[39m[38;2;225;228;232m } [39m[38;2;249;117;131m=[39m[38;2;225;228;232m options;[39m[0m                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateListPicker[39m[38;2;225;228;232m({[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    pi, tui, theme, done, initialQuery: [39m[38;2;158;203;255m""[39m[38;2;225;228;232m,[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    config: {[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+t inspect  ctrl+i insert[0m                                                                    [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`todos — list row rendering > given a scan error > renders empty list when ast-grep fails 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m TODOs (0/0)[0m                              [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m                           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                                                                   [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`todos — list row rendering > given a single TODO item > renders the TODO with file path and line number 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m TODOs (1/1)[0m                              [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m agent/extensions/ide/components/files/component.ts[0m                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m implement keyboard shortcut for file prev[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker"[39m[38;2;225;228;232m;[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { FileInfo } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mrg[39m[38;2;225;228;232m([39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m, [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;255;171;112mquery[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromis[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m pi.[39m[38;2;179;146;240mexec[39m[38;2;225;228;232m([39m[38;2;158;203;255m"rg"[39m[38;2;225;228;232m, [[39m[38;2;158;203;255m"--files"[39m[38;2;225;228;232m, [39m[38;2;158;203;255m"-g"[39m[38;2;225;228;232m, query]).[39m[38;2;179;146;240mthen[39m[38;2;225;228;232m(([39m[38;2;255;171;112mr[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[0m             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    r.stdout.[39m[38;2;179;146;240msplit[39m[38;2;225;228;232m([39m[38;2;158;203;255m"[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;158;203;255m"[39m[38;2;225;228;232m).[39m[38;2;179;146;240mfilter[39m[38;2;225;228;232m(Boolean).[39m[38;2;179;146;240mmap[39m[38;2;225;228;232m(([39m[38;2;255;171;112mp[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m ({ path: p })),[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  );[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateFilesComponent[39m[38;2;225;228;232m([39m[38;2;255;171;112moptions[39m[38;2;249;117;131m:[39m[38;2;225;228;232m {[39m[0m                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m;[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mterminal[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mrows[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumber[39m[38;2;225;228;232m }; [39m[38;2;179;146;240mrequestRender[39m[38;2;249;117;131m:[39m[38;2;225;228;232m () [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m };[39m[0m        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mTheme[39m[38;2;225;228;232m;[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;179;146;240mdone[39m[38;2;249;117;131m:[39m[38;2;225;228;232m ([39m[38;2;255;171;112mresult[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mFileInfo[39m[38;2;225;228;232m [39m[38;2;249;117;131m|[39m[38;2;225;228;232m [39m[38;2;121;184;255mnull[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m;[39m[0m                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mctx[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m };[39m[0m                                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}) {[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m { [39m[38;2;121;184;255mpi[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtui[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtheme[39m[38;2;225;228;232m, [39m[38;2;121;184;255mdone[39m[38;2;225;228;232m, [39m[38;2;121;184;255mctx[39m[38;2;225;228;232m } [39m[38;2;249;117;131m=[39m[38;2;225;228;232m options;[39m[0m                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateListPicker[39m[38;2;225;228;232m({[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    pi, tui, theme, done, initialQuery: [39m[38;2;158;203;255m""[39m[38;2;225;228;232m,[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    config: {[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+t inspect  ctrl+i insert[0m                                                                    [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`todos — list row rendering > given empty results > renders the no items message 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m TODOs (0/0)[0m                              [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m                           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                                                                   [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`todos — list row rendering > given multiple TODO items > renders all TODOs with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m TODOs (4/4)[0m                              [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m agent/extensions/ide/components/files/component.ts[0m                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m implement keyboard shortcut for file prev[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m add error handling for jj command failure[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m memory leak in split-panel when switching[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m workaround for terminal width calculation[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker"[39m[38;2;225;228;232m;[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { FileInfo } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mrg[39m[38;2;225;228;232m([39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m, [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;255;171;112mquery[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromis[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m pi.[39m[38;2;179;146;240mexec[39m[38;2;225;228;232m([39m[38;2;158;203;255m"rg"[39m[38;2;225;228;232m, [[39m[38;2;158;203;255m"--files"[39m[38;2;225;228;232m, [39m[38;2;158;203;255m"-g"[39m[38;2;225;228;232m, query]).[39m[38;2;179;146;240mthen[39m[38;2;225;228;232m(([39m[38;2;255;171;112mr[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[0m             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    r.stdout.[39m[38;2;179;146;240msplit[39m[38;2;225;228;232m([39m[38;2;158;203;255m"[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;158;203;255m"[39m[38;2;225;228;232m).[39m[38;2;179;146;240mfilter[39m[38;2;225;228;232m(Boolean).[39m[38;2;179;146;240mmap[39m[38;2;225;228;232m(([39m[38;2;255;171;112mp[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m ({ path: p })),[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  );[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateFilesComponent[39m[38;2;225;228;232m([39m[38;2;255;171;112moptions[39m[38;2;249;117;131m:[39m[38;2;225;228;232m {[39m[0m                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m;[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mterminal[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mrows[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumber[39m[38;2;225;228;232m }; [39m[38;2;179;146;240mrequestRender[39m[38;2;249;117;131m:[39m[38;2;225;228;232m () [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m };[39m[0m        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mTheme[39m[38;2;225;228;232m;[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;179;146;240mdone[39m[38;2;249;117;131m:[39m[38;2;225;228;232m ([39m[38;2;255;171;112mresult[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mFileInfo[39m[38;2;225;228;232m [39m[38;2;249;117;131m|[39m[38;2;225;228;232m [39m[38;2;121;184;255mnull[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m;[39m[0m                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mctx[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m };[39m[0m                                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}) {[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m { [39m[38;2;121;184;255mpi[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtui[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtheme[39m[38;2;225;228;232m, [39m[38;2;121;184;255mdone[39m[38;2;225;228;232m, [39m[38;2;121;184;255mctx[39m[38;2;225;228;232m } [39m[38;2;249;117;131m=[39m[38;2;225;228;232m options;[39m[0m                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateListPicker[39m[38;2;225;228;232m({[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    pi, tui, theme, done, initialQuery: [39m[38;2;158;203;255m""[39m[38;2;225;228;232m,[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    config: {[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+t inspect  ctrl+i insert[0m                                                                    [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`todos — list row rendering > given multiple TODO items > renders mixed TODO/FIXME/HACK/XXX tags 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m TODOs (4/4)[0m                              [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m agent/extensions/ide/components/files/component.ts[0m                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m implement file preview toggle [38;2;76;62;118magent/exten[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m race condition in list-picker update [38;2;76;62;118magen[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m workaround for terminal width on resize [38;2;76;62;118ma[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m needs review split panel border rendering[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker"[39m[38;2;225;228;232m;[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { FileInfo } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mrg[39m[38;2;225;228;232m([39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m, [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;255;171;112mquery[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromis[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m pi.[39m[38;2;179;146;240mexec[39m[38;2;225;228;232m([39m[38;2;158;203;255m"rg"[39m[38;2;225;228;232m, [[39m[38;2;158;203;255m"--files"[39m[38;2;225;228;232m, [39m[38;2;158;203;255m"-g"[39m[38;2;225;228;232m, query]).[39m[38;2;179;146;240mthen[39m[38;2;225;228;232m(([39m[38;2;255;171;112mr[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[0m             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    r.stdout.[39m[38;2;179;146;240msplit[39m[38;2;225;228;232m([39m[38;2;158;203;255m"[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;158;203;255m"[39m[38;2;225;228;232m).[39m[38;2;179;146;240mfilter[39m[38;2;225;228;232m(Boolean).[39m[38;2;179;146;240mmap[39m[38;2;225;228;232m(([39m[38;2;255;171;112mp[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m ({ path: p })),[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  );[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateFilesComponent[39m[38;2;225;228;232m([39m[38;2;255;171;112moptions[39m[38;2;249;117;131m:[39m[38;2;225;228;232m {[39m[0m                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mpi[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mExtensionAPI[39m[38;2;225;228;232m;[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mterminal[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mrows[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumber[39m[38;2;225;228;232m }; [39m[38;2;179;146;240mrequestRender[39m[38;2;249;117;131m:[39m[38;2;225;228;232m () [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m };[39m[0m        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mTheme[39m[38;2;225;228;232m;[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;179;146;240mdone[39m[38;2;249;117;131m:[39m[38;2;225;228;232m ([39m[38;2;255;171;112mresult[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mFileInfo[39m[38;2;225;228;232m [39m[38;2;249;117;131m|[39m[38;2;225;228;232m [39m[38;2;121;184;255mnull[39m[38;2;225;228;232m) [39m[38;2;249;117;131m=>[39m[38;2;225;228;232m [39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m;[39m[0m                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mctx[39m[38;2;249;117;131m:[39m[38;2;225;228;232m { [39m[38;2;255;171;112mcwd[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m };[39m[0m                                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}) {[39m[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m { [39m[38;2;121;184;255mpi[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtui[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtheme[39m[38;2;225;228;232m, [39m[38;2;121;184;255mdone[39m[38;2;225;228;232m, [39m[38;2;121;184;255mctx[39m[38;2;225;228;232m } [39m[38;2;249;117;131m=[39m[38;2;225;228;232m options;[39m[0m                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m [39m[38;2;179;146;240mcreateListPicker[39m[38;2;225;228;232m({[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    pi, tui, theme, done, initialQuery: [39m[38;2;158;203;255m""[39m[38;2;225;228;232m,[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    config: {[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+t inspect  ctrl+i insert[0m                                                                    [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
